# Problem-Solving

./: .gitignore  README.md
C/: 01_Stack  01_Stack.c  02_Stack  02_Stack.c  03_Queue  03_Queue.c  03_Queue_application  03_Queue_application.c  TEST  pop_append_list.c
C++/String/: 01_string.cpp  02_Construct.cpp  04_rbegin.cpp  05_cbegin.cpp  06_crbegin.cpp  07_size.cpp  08_length.cpp  09_maxSize.cpp  10_Clear.cpp  11_empty.cpp  12_shrink_to_fit.cpp  13_operator.cpp  14_at.cpp  15_Back.cpp  16_front.cpp  17_Appen.cpp  18_push_back.cpp  19_assign.cpp  20_insert.cpp  21_erase.cpp  22_replace.cpp  23_swap.cpp  24_pop_back.cpp  25_c_str.cpp  3_begin.cpp  tempCodeRunnerFile.cpp  test.txt
CMake/01_TestCmake/: CMakeLists.txt  main.cpp
CMake/02_CmakeProject/: CMakeLists.txt  main2.cpp  math.cpp
CMake/03_CmakeVariables/: CMakeLists.txt  main.cpp  string_example.cmake
CMake/04_cache_example/: CMakeCache.txt  CMakeLists.txt
CMake/05_CmakeString/: CMakeLists.txt
CMake/06_CMakeList/: CMakeLists.txt
CMake/07_math/: CMakeLists.txt
CMake/08_Conditions/: CMakeLists.txt
CMake/09_Loop/: CMakeLists.txt
CMake/10_OrganizingProjectStructur/03_Sub_Folders/: CMakeLists.txt
CMake/10_OrganizingProjectStructur/03_Sub_Folders/.cache/clangd/index/: print.hpp.D82BF5DFE265B3D9.idx
CMake/10_OrganizingProjectStructur/03_Sub_Folders/print/: CMakeLists.txt
CMake/10_OrganizingProjectStructur/03_Sub_Folders/sort/: CMakeLists.txt
CMake/10_OrganizingProjectStructur/05_functions/src/print/: CMakeLists.txt
CMake/10_OrganizingProjectStructur/06_functios_warnings/: CMakeLists.txt
CMake/10_OrganizingProjectStructur/06_functios_warnings/src/print/: CMakeLists.txt  print.cpp
CMake/10_OrganizingProjectStructur/06_functios_warnings/src/sort/: CMakeLists.txt
CMake/10_OrganizingProjectStructur/09_keyword_arguments/: CMakeLists.txt
CMake/10_OrganizingProjectStructur/09_keyword_arguments/src/print/: CMakeLists.txt
CMake/10_OrganizingProjectStructur/09_keyword_arguments/src/sort/: CMakeLists.txt  sort.cpp
Command Line Arguments/: 01_HelloWorld.c  02_DellingWithinputs.c  03_Convert_To_Int.c  04_inputcondition.c
Embedded-C/: 03_BitwiseOperator_Shift  03_BitwiseOperator_Shift.c  05_Bit_Fields.c  06_sprintf_sscanf  06_sprintf_sscanf.c  07_strstr  07_strstr.c  08_strtok  08_strtok.c  09_  09_parse_http.c  2_BitwiseOperator  2_BitwiseOperator.c  3_Macro_Function.c  4_Macro_SetAddress.c  AligmentOnStrucuer.c
Embedded-C/Shift Operators/: 01_leftShiftOperator  01_leftShiftOperator.c  02_rightShiftOperator  02_rightShiftOperator.c
LeetCode/01_Arrays 101/: 01_MaxConsecutiveOnes.c  01_MaxConsecutiveOnes.cpp  02_FindNumbersWithEvenNumberOfDigits.c  02_FindNumbersWithEvenNumberOfDigits.cpp  03_SquaresOfSortedArray.c  03_SquaresOfSortedArray2.c  03_SquaresOfSortedArray2.cpp  04_DuplicateZeros.c  05_MergeSortedArray.cpp  05_MergeSortedArray2.cpp  06_Remove Element.cpp  07_RemoveDuplicatesfromSortedArray.cpp  08_checkIfNandItsDoubleExist.cpp  10_ValidMountainArray.cpp  10_ValidMountainArray2.cpp  11_ReplaceElementsWithGreatestElementonRightSide.cpp  11_ReplaceElementsWithGreatestElementonRightSide2.cpp  12_ MoveZeroes.cpp  12_ MoveZeroes2.cpp  13_SortArrayByParity.cpp  14_ThirdMaximumNumber.c  15_FindAllNumbersDisappearedInArray.cpp  test.cpp
LeetCode/02_Array and String/: 01_FindPivotIndex.cpp  02_LargestNumberAtLeastTwiceofOthers.cpp  03_PlusOne.cpp  04_DiagonalTraverse.cpp  05_SpiralMatrix.cpp  06_PascalTriangle.cpp  06_PascalTriangle2.cpp
Pointers/C/: 01_PointerBasics.c  02_Pointers_Arithmetic.c  03.1_PointerCasting  03.1_PointerCasting.c  03_PointerTypeCasting.c  04_PointerToPonter.c  06_CallByRerfernce.c  07_Arrary_Ponters.c  08_CharacterArrayPonter.c  09_CharacterArrayPonter2.c  10_CharacterArrayPonter3.c  11_MultiDiensionalArrays.c  12_Malloc.c  13_DynamicArray.c  14__Calloc.c  15_Malloc_Defult_value.c  16_Realloc_IncreseSize.c  17_Realloc_Decreas_Size.c  18_CallByRefrence.c  19_PointerAsFunctionReturn.c  20_Function_Pointer_basics.c  21_Function_Pointer.c  22_Assined_Addres_to_Pointer.c  22_FuctionPonter2.c  23_Assined_Addres_to_Pointer.c  24_typedef_func_Pointer.c  25_typedef_funcPointer2.c  33_Void_Pointer.c  55_Double_Pointer.c  tempCodeRunnerFile.c
Programming-Advices/: README.md
Programming-Advices/04 - Algorithms & Problem-Solving Level 1 Solutions/: PS#1.cpp  PS#10.cpp  PS#11x.cpp  PS#12.cpp  PS#13.cpp  (+19 more)
(+1242 files in other folders)
